Menu not showing up - need to fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ canvas {
 
 .header-text {
   color: #FFFFFF;
-  margin-top: 10rem;
+  margin-top: 8rem;
   text-align: center; }
   .header-text h1 {
     font-size: 6rem;
@@ -53,5 +53,5 @@ canvas {
     letter-spacing: .5rem; }
     .header-text h1 span {
       display: inline-block;
-      padding: .6rem;
+      padding: 1.5rem;
       border: 0.5rem solid rgba(255, 255, 255, 0.9); }
