--- a/assets/sass/_header.sass
+++ b/assets/sass/_header.sass
@@ -33,7 +33,7 @@ canvas
 
 .header-text
   color: $white
-  margin-top: 10rem
+  margin-top: 8rem
   text-align: center
 
   h1
@@ -44,5 +44,5 @@ canvas
 
     span
       display: inline-block
-      padding: .6rem
+      padding: 1.5rem
       border: .5rem solid rgba($white, .9)
